--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -14,4 +14,4 @@ jobs:
       - uses: bluefireteam/flutter-gh-pages@v7
         with:
             baseHref: /automatas2/
-            webRenderer: canvaskit
+            webRenderer: html
