--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   fluro: ^2.0.3
   flutter:
     sdk: flutter
+  flutter_markdown: ^0.6.10+1
   google_fonts: ^3.0.1
   url_launcher: ^6.1.2
 
