--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
   sdk: ">=2.17.0 <3.0.0"
 dependencies:
   animate_do: ^2.1.0
+  chewie: ^1.3.3
   cupertino_icons: ^1.0.2
   fluro: ^2.0.3
   flutter:
@@ -17,6 +18,7 @@ dependencies:
   flutter_markdown: ^0.6.10+1
   google_fonts: ^3.0.1
   url_launcher: ^6.1.2
+  video_player: ^2.4.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -32,6 +34,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/img/
+    - assets/video/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
